--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-doc": "jsdoc -c jsdoc.json"
+    "build-doc": "jsdoc -c -r jsdoc.json -- ."
   },
   "repository": {
     "type": "git",
