--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "url": "https://github.com/platzi/nodejsesenciales/issues"
   },
   "homepage": "https://github.com/platzi/nodejsesenciales#readme",
-  "dependencies": {
-    "eslint": "^5.6.1",
+  "dependencies": {},
+  "devDependencies": {
+    "eslint": "^5.15.1",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0"
+    "eslint-plugin-import": "^2.16.0"
   }
 }
